# Game

./: .gitignore  CMakeLists.txt
shaders/: compile.bat
shaders/src/: shader.frag  shader.vert
src/: Game.cpp  GameConfig.h  GameConfig.h.in
